--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -36,7 +36,6 @@ body {
 .title_one {
   color: #ff1e1e;
   font-family: 'Orbitron', sans-serif;
-  font-size: 40px;
   text-shadow: 0 0 12px #ff1e1e;
 }
 
@@ -46,7 +45,7 @@ body {
 
 .form_box {
   background-color: #1e1e1e;
-  padding: 25px;
+  padding: 15px;
   border-radius: 25px;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.15);
   text-align: center;
@@ -107,10 +106,10 @@ body {
 
 .yt-float {
   position: fixed;
-  margin-top: 100px;
+  margin-bottom: 60px;
   bottom: 10px;
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
   background-color: #ff1e1e;
   color: white;
   border-radius: 50%;
@@ -144,3 +143,19 @@ body {
   box-shadow: 0 0 12px #ff1e1e;
 }
 
+.mensagem2 {
+  text-align: center;
+  color: white;
+  max-width: 600px;
+  margin:80px auto;
+  padding: 0 10px;
+  padding-top: 10px;
+  word-wrap: break-word;
+  white-space: normal;
+  animation: piscar 3s infinite;
+}
+
+@keyframes piscar {
+  20%, 100% { opacity: 1; }
+  90% { opacity: 0; }
+}
