--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -50,7 +50,10 @@ body {
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.15);
   text-align: center;
   transition: all 0.3s ease-in-out;
+  width: 500px; /* ou defina uma largura fixa, tipo 300px */
+  margin: 0 auto;
 }
+
 
 .form_box:hover {
   box-shadow: 0 0 50px rgba(255, 0, 0, 0.25);
@@ -364,4 +367,8 @@ body {
   font-weight: bold;
   text-shadow: 0 0 8px #000000;
   margin: 0;
+}
+
+.text_button {
+  color: white;
 }
